--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@prisma/client": "^6.2.1",
     "@supabase/supabase-js": "^2.47.3",
+    "@vercel/functions": "^3.4.2",
     "micromatch": "^4.0.8",
     "next": "^15.1.4",
     "react": "^19.0.0",
